--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@
 !/app/assets/builds/.keep
 
 /node_modules
+/log/*
+/tmp/*
+/.bundle
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/public/assets
+node_modules/
+yarn-error.log
+.byebug_history
+storage/
